# paperseek

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  app.py  docker-compose.yml  ms_deploy.json  pyproject.toml  vercel.json
.github/workflows/: publish-lazycat-image.yml
api/: index.py
docs/: README.md  deployment.md  index.md  online-demo.md  user-manual.md
docs/.vitepress/: config.mts
paperseek/: __init__.py  abstract_fetcher.py  cli.py  config.py  config_store.py  diagnostics.py  disciplines.py  env_loader.py  history.py  llm_client.py  results.py  search_agent.py  web_app.py
paperseek/client/: __init__.py
paperseek/static/: app.js  index.html  styles.css
paperseek_core/: __init__.py  abstracts.py  agent.py  config.py  disciplines.py  llm.py  prompts.py  providers.py  results.py  source_metadata.py
paperseek_core/client/: __init__.py  api.py  client.py  config.py  errors.py  models.py  response.py  rest.py
paperseek_core/sources/: __init__.py  metadata.py  providers.py
skills/: README.md
skills/paperseek/references/: cli-contract.md  management-layer.md
tests/: test_agent_api.py  test_cli_management.py  test_config_store.py  test_deployment.py  test_disciplines.py  test_history.py  test_llm_providers.py  test_packaging.py  test_skill_launcher.py  test_web_app.py
